# tv-audience-forecaster

./: .gitignore  GEMINI.md  LICENSE  README.md  environment.yml  portfolio-export.md  pyproject.toml
.github/workflows/: notify-portfolio.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
notebooks/: 01_Forecast_Analysis.ipynb
scripts/: create_notebook.py  generate_plot_image.py  generate_synthetic_agf.py
specs/001-fft-forecasting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fft-forecasting/checklists/: requirements.md
specs/001-fft-forecasting/contracts/: interface.md
specs/002-model-benchmarking/: benchmark-report.md  plan.md  spec.md  tasks.md
src/cli/: main.py
src/data/: events_ingestion.py  export.py  holidays.py  ingestion.py  interpolation.py  pipeline.py  segmentation.py  validators.py  weather.py
src/evaluation/: baseline.py  benchmark.py  metrics.py
src/models/: convlstm_forecaster.py  event_impact.py  fft_extractor.py  fft_reconstructor.py  forecaster.py  pipeline.py  prophet_forecaster.py  residuals.py  types.py
src/utils/: exceptions.py
tests/contract/: test_export.py  test_ingestion.py
tests/unit/: test_apply_impacts.py  test_evaluation.py  test_event_impact.py  test_events_parser.py  test_extrapolation.py  test_fft_extraction.py  test_fft_reconstruction.py  test_interpolation.py  test_prophet.py  test_residuals.py  test_segmentation.py  test_windowing.py
