[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-audience-forecaster"
version = "0.1.0"
description = "Time-series forecasting pipeline for hourly TV audience ratings using FFT, currently being benchmarked against Prophet and ConvLSTM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0"
]

[project.scripts]
tv-forecast = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
